# mandelbrot-rs

./: Cargo.toml  README.md
src/: application.rs  main.rs  renderer.rs
src/renderer/: escape_time.rs  game_of_life.rs  icon_renderer.rs  julia.rs  lsystem.rs  mandelbrot.rs  mod.rs  progressive.rs  smooth_life.rs  viewer.rs
