[package]
name = "mandelbrot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
skia-safe = { version = "0.93.1", features = ["gl"] }
winit = "0.30.13"
gl = "0.14.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
bytemuck = "1.25.0"
egui = "0.33.3"
egui-winit = "0.33.3"
egui_skia = { git = "https://github.com/kylefeng28/egui_skia" }
